Added sign up button

--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -41,6 +41,11 @@
                 Submit
             </button>
         </div>
+        <div class="flex justify-center mt-4">
+            <a href="{% url 'signup' %}" class="text-blue-500 hover:underline">
+                Create new account
+            </a>
+        </div>
     </form>
 </div>
 {% endblock %}
