mmassive order system changes and other minor changes

--- a/inventory/templates/inventory/order.html
+++ b/inventory/templates/inventory/order.html
@@ -14,6 +14,7 @@
             Username: {{ order.username }}<br><br>
             Email: {{ order.email }}<br><br>
             Phone number: {{ order.phone_no }}<br><br>
+            Status: {{ order.status }}<br><br>
         </div><br>
             <center>
                 <button 
