--- a/inventory/templates/inventory/closed_orders.html
+++ b/inventory/templates/inventory/closed_orders.html
@@ -25,11 +25,14 @@
                     <img src="{{ MEDIA_URL }}{{ order.product_image_path }}" class="w-32 h-32 object-cover mx-auto">
                 </div>
                 <div class="flex-1 mt-4">
-                    <form method="POST" id="myForm{{ order.order_id }}">
+                    <form method="post" action="">
                         {% csrf_token %}
                         <input type="hidden" name="order_id" value="{{ order.order_id }}">
-                        <input type="checkbox" id="myCheckbox{{ order.order_id }}" name="myCheckbox" value="checked" checked>
-                        <label for="myCheckbox{{ order.order_id }}">Close order</label><br>
+                        <select name="status" class="px-4 py-2 border border-gray-800 bg-gray-900 rounded-md shadow-sm" onchange="this.form.submit()">
+                            <option value="NA" {% if order.status == 'NA' %}selected{% endif %}>Not accepted</option>
+                            <option value="IP" {% if order.status == 'IP' %}selected{% endif %}>In progress</option>
+                            <option value="CO" {% if order.status == 'CO' %}selected{% endif %}>Complete</option>
+                        </select>
                     </form>
                 </div>
             </div>
@@ -49,7 +52,7 @@
                 </div>
                 <div class="flex-1 mb-4 md:mb-0 text-center">
                     <p class="text-blue-500">Status</p>
-                    <p>Completed</p>
+                    <p>{{ order.get_status_display }}</p>
                 </div>
                 <div class="flex-1 text-center">
                     <img src="{{ MEDIA_URL }}{{ order.product_image_path }}" class="w-32 h-32 object-cover mx-auto">
